<?xml version="1.0"?>
<package format="2">
  <name>BaseNode</name>
  <version>0.0.0</version>
  <description>The BaseNode package</description>

  <maintainer email="b51live@gmail.com">b51</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>GoogleDeps</build_depend>
  <exec_depend>roscpp</exec_depend>
</package>
